<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.braintraininggame.GameActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/guess_field"
            android:text="@string/guess_field"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/guess_text_view"
            android:layout_weight="1"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/question_text_field"
            android:text=""
            android:layout_weight="1"
            android:textSize="@dimen/guess_text_view"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer_text_field"
            android:text="@string/question_mark"
            android:layout_weight="1"
            android:textSize="@dimen/guess_text_view"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/correct_or_wrong"
            android:layout_weight="1"
            android:textSize="22dp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countdown_timer"
            android:text=""
            android:layout_weight="1"
            android:textSize="22dp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/one"
                android:text="@string/one"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/two"
                android:text="@string/two"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/three"
                android:text="@string/three"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:visibility="invisible"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/four"
                android:text="@string/four"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/five"
                android:text="@string/five"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/six"
                android:text="@string/six"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:visibility="invisible"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/seven"
                android:text="@string/seven"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/eight"
                android:text="@string/eight"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/nine"
                android:text="@string/nine"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:visibility="invisible"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/delete"
                android:text="@string/delete"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/zero"
                android:text="@string/zero"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1" />
            <Button
                android:id="@+id/hash"
                android:text="@string/hash"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1" />
            <Button
                android:id="@+id/minus"
                android:text="@string/minus"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1" />
            </LinearLayout>
    </LinearLayout>

</LinearLayout>
