<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/new_game_button"
        android:text="@string/new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startGame()"
        />

    <Button
        android:id="@+id/continue_game_button"
        android:text="@string/continue_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/about_button"
        android:text="@string/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/exit_button"
        android:text="@string/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>
